force-app/main/default/objects/Booking__c/fields/Flight_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Flight_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flight Schedule</label>
    <referenceTo>Flight_Schedule__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>