force-app/main/default/objects/Booking__c/fields/Total_Fare__c.field-meta.xml
<CustomField>
    <fullName>Total_Fare__c</fullName>
    <label>Total Fare</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>