force-app/main/default/objects/Booking__c/validationRules/Passenger_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Passenger_Required</fullName>
    <active>true</active>
    <description>Passenger_Required</description>
    <errorConditionFormula>ISBLANK(Passenger__c)</errorConditionFormula>
    <errorMessage>Passenger is required.</errorMessage>
</ValidationRule>