force-app/main/default/objects/Booking__c/validationRules/Payment_Must_Be_Paid.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Must_Be_Paid</fullName>
    <active>true</active>
    <description>Payment_Must_Be_Paid</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Confirmed&quot;),
    NOT(ISPICKVAL(Payment_Status__c, &quot;Paid&quot;))
)</errorConditionFormula>
    <errorMessage>Cannot confirm booking until payment is completed.</errorMessage>
</ValidationRule>